force-app/src/objects/TR1__Purchase_Order_Spend__c.object
<CustomObject>
    <fields>
        <fullName>TR1__Closing_Report__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Closing Report</label>
        <referenceTo>TR1__Closing_Report__c</referenceTo>
        <relationshipLabel>Purchase Order Spend</relationshipLabel>
        <relationshipName>Purchase_Order_Spend</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TR1__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Purchase_Order_Detail__c</fullName>
        <label>Purchase Order Detail</label>
        <referenceTo>TR1__Purchase_Order__c</referenceTo>
        <relationshipLabel>Spend</relationshipLabel>
        <relationshipName>Purchase_Order_Spend</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TR1__Spend_Amount__c</fullName>
        <label>Spend Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Purchase Order Spend</label>
    <nameField>
        <displayFormat>POS-{0}</displayFormat>
        <label>Purchase Order Spend Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Order Spend</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>